--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     
-    <title>iCut</title>
+    <title>OnYou</title>
   </head>
   <body>
     <div id="app"></div>
